# LLMs-Project

./: README.md  pyproject.toml
src/: demo_blip.ipynb  demo_falcon.ipynb  demo_llavaNext.ipynb  demo_llavaNext_owlv2.ipynb
src/detectors/: __init__.py  base.py  owlvitv2.py
src/diffusion_models/: __init__.py  stablediffusionxl.py
src/llms/: __init__.py  objects_extraction.py  prompts.py
src/utils/: detection.py
