[tool.poetry]
name = "LLMs_Project"
version = "0.1.0"
description = ""
authors = ["Andrey Palaev <a.palaev@innopolis.university>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp311-cp311-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp311-cp311-linux_x86_64.whl"}
transformers = "^4.42.3"
numpy = "1.26.4"
inflect = "^7.3.1"
diffusers = "^0.21.4"
ipykernel = "^6.29.5"
accelerate = "^0.32.1"
scipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"